@@ -2715,6 +2715,7 @@ bool Mob::SpellEffect(Mob* caster, uint16 spell_id, float partial)
 			case SE_SecondaryDmgInc:
 			case SE_ArcheryDamageModifier:
 			case SE_ConsumeProjectile:
+            case SE_ForageAdditionalItems:
 			case SE_FrontalBackstabChance:
 			case SE_FrontalBackstabMinDmg:
 			case SE_TripleBackstab:
