@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 04/04/2013 ==
+demonstar55: Implemented SE_ForageAdditionalItems as a bonus
+required SQL: 2013_04_04_NaturesBounty.sql
 
 == 04/03/2013 ==
 demonstar55: Overloaded Mob::Say_StringID with the option to provide a message type
